Fixed bug in table level privilege GRANT handling. (Bug #2178) Portability fixes

mysql-test/r/rpl_until.result:
  Portability fix
mysql-test/t/rpl_until.test:
  Portability fix
sql/slave.cc:
  Write UNTIL position to logs (for debugging)
sql/slave.h:
  Write UNTIL position to logs (for debugging)
sql/sql_acl.cc:
  Fixed bug in table level privilege GRANT handling. (Bug #2178)