sql/slave.cc
@@ -2682,7 +2682,7 @@ static int exec_relay_log_event(THD* thd, RELAY_LOG_INFO* rli)
       rli->is_until_satisfied()) 
   {
     sql_print_error("Slave SQL thread stopped because it reached its"
-                    " UNTIL position");
+                    " UNTIL position %ld", (long) rli->until_pos());
     /* 
       Setting abort_slave flag because we do not want additional message about
       error in query execution to be printed.
